# agent-mcp

./: .env.example  Dockerfile  Makefile  README.md  mcp.json  pyproject.toml
conf/prompts/: steering-agent-system.txt
src/moov_agent/: __init__.py  agent_service.py  create_agent.py  llm_models.py
src/moov_api/: __init__.py  __main__.py  container.py  create_app.py
src/moov_api/models/: agent.py
src/moov_api/routers/: __init__.py  agent.py  create_agent_router.py  default_router.py
src/moov_api/services/: __init__.py  agent_service.py
src/moov_core/: settings.py
src/moov_mcp/: __init__.py  create_mcp.py
src/moov_mcp/models/: analysis.py
src/moov_mcp/tools/: __init__.py  analysis.py
